@@ -1,5 +1,10 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.460 2005/12/16 19:08:59 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.461 2005/12/16 19:14:45 wolf31o2 Exp $
+
+  16 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/grp/grp-chroot.sh, targets/grp/grp-controller.sh,
+  targets/grp/grp-preclean-chroot.sh:
+  Fixed up spacing/coding style on grp.
 
   16 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/embedded/embedded-chroot.sh,
